# OpenManic

./: .editorconfig  .gitattributes  AGENTS.md  Cargo.toml  OpenManic Dashboard (standalone).html  README.md  clippy.toml  deny.toml
.github/workflows/: windows-release.yml
crates/openmanic/: Cargo.toml
crates/openmanic-application/: Cargo.toml
crates/openmanic-application/src/: application_metadata.rs  calendar_projection.rs  catalog.rs  commands.rs  data_operations.rs  errors.rs  events.rs  focus.rs  ids.rs  layout.rs  lib.rs  overview.rs  ports.rs  projection.rs  saved_view.rs  schedule.rs  schedule_projection.rs  schedule_time.rs  settings.rs  timeline_projection.rs  title_stabilizer.rs  tracking.rs
crates/openmanic-application/src/runtime/: cancellation.rs  health.rs  lanes.rs  mailbox.rs  mod.rs  shutdown.rs  supervisor.rs
crates/openmanic-domain/: Cargo.toml
crates/openmanic-domain/src/: activity.rs  catalog.rs  documents.rs  focus.rs  ids.rs  lib.rs  schedule.rs  time.rs
crates/openmanic-platform/: Cargo.toml
crates/openmanic-platform/src/: adapter.rs  capabilities.rs  fake.rs  lib.rs  windows_autostart.rs  windows_control.rs  windows_identity.rs  windows_lifecycle.rs  windows_metadata.rs  windows_raw.rs  windows_single_instance.rs  windows_tray.rs
crates/openmanic-storage-sqlite/: Cargo.toml
crates/openmanic-storage-sqlite/migrations/: 0001_initial.sql  0002_schedule_exception_boundary_resolution.sql  0003_foreground_switch_delay.sql  0004_remove_production_demo_seed.sql
crates/openmanic-storage-sqlite/src/: backup.rs  connection.rs  errors.rs  lib.rs  migration.rs  options.rs  repository.rs  writer.rs
crates/openmanic-storage-sqlite/tests/: sqlite_store.rs
crates/openmanic-ui-egui/: Cargo.toml
crates/openmanic-ui-egui/src/: app.rs  calendar.rs  controller.rs  design.rs  distribution.rs  jobs.rs  layout.rs  layout_editor.rs  lib.rs  model.rs  overview.rs  reducer.rs  repaint.rs  settings.rs  shell.rs  shutdown.rs  theme.rs  today.rs  usage.rs
crates/openmanic-ui-egui/src/timeline/: detail.rs  geometry.rs  hit_test.rs  interaction.rs  mod.rs  paint.rs  renderer.rs  ticks.rs
crates/openmanic/src/: bootstrap.rs  cli.rs  composition.rs  data_root.rs  diagnostics.rs  lib.rs  main.rs
demo/: Run-OpenManic-Demo.cmd
demo/demo-data/: openmanic.sqlite3
docs/: gui-tiebreaker-and-architecture.md  rust-gui-evaluation.md
docs/gui/: openmanic-gui-product-requirements.md
docs/gui/implementation/: agent-execution-strategy.md  phase-4-edge-cases.md  phase-5-edge-cases.md  task-ledger.md  terra-handover.md
docs/gui/implementation/decisions/: README.md
docs/gui/spec/: README.md  architecture.md  code-quality-standards.md  data-model.md  delivery-and-setup.md  implementation-plan.md  initial-categories.md  performance-and-reliability.md  platform-adapters.md  project-structure.md  ui-implementation.md
fixtures/performance/: expected-metadata.json  generator-config.toml
fixtures/performance/native-ui/: README.md  reference-hardware-manifest.template.json
fixtures/ui-direction/review/: README.md
packaging/windows/: README.txt
prototypes/egui-dashboard/: Cargo.toml  README.md
prototypes/egui-dashboard/src/: main.rs
scripts/: generate-demo-database.py  package-windows.ps1
tools/fixture-generator/: Cargo.toml
tools/fixture-generator/src/: clock.rs  lib.rs  main.rs  random.rs  scenarios.rs  scripted.rs  serialization.rs
tools/native-ui-fixture/: Cargo.toml
tools/native-ui-fixture/src/: arguments.rs  main.rs  report.rs  workload.rs
tools/ui-direction-spike/: Cargo.toml
tools/ui-direction-spike/src/: main.rs  model.rs  render.rs
tools/xtask/src/: command.rs  dependency.rs  docs.rs  main.rs  release.rs
