[package]
name = "openmanic-platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[features]
default = ["platform-windows"]
platform-windows = []
platform-linux = []

[dependencies]
openmanic-application.workspace = true

[lints]
workspace = true
