[package]
name = "openmanic-ui-egui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[features]
default = ["renderer-wgpu"]
renderer-wgpu = ["dep:eframe", "eframe/wgpu"]
renderer-glow = ["dep:eframe", "eframe/glow"]
dev-tools = []

[dependencies]
eframe = { workspace = true, optional = true, features = ["default_fonts"] }
egui.workspace = true
openmanic-application.workspace = true
openmanic-domain.workspace = true

[lints]
workspace = true
