[package]
name = "openmanic"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[features]
default = ["renderer-wgpu", "platform-windows"]
renderer-wgpu = ["openmanic-ui-egui/renderer-wgpu", "eframe/wgpu"]
renderer-glow = ["openmanic-ui-egui/renderer-glow", "eframe/glow"]
platform-windows = ["openmanic-platform/platform-windows"]
platform-linux = ["openmanic-platform/platform-linux"]
dev-tools = ["openmanic-ui-egui/dev-tools"]

[dependencies]
eframe = { workspace = true, default-features = false, features = ["default_fonts"] }
openmanic-application.workspace = true
openmanic-domain.workspace = true
openmanic-platform.workspace = true
openmanic-storage-sqlite.workspace = true
openmanic-ui-egui.workspace = true

[lints]
workspace = true
