[package]
name = "ui-direction-spike"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[features]
default = ["renderer-wgpu"]
renderer-wgpu = ["eframe/wgpu"]
renderer-glow = ["eframe/glow"]

[dependencies]
eframe = { workspace = true, default-features = false, features = ["default_fonts"] }
fixture-generator = { path = "../fixture-generator" }

[lints]
workspace = true
